attempt at bug fix on mobile

--- a/assets/styles/generic/main.styl
+++ b/assets/styles/generic/main.styl
@@ -1,6 +1,8 @@
 section > div
-	@extend .fluid-container
-
+	//@extend .fluid-container
+	width: 100%
+	margin: 0 auto
+	overflow: hidden
 
 section
 	&#splash
